[build-system]
requires = [
    "setuptools", 
    "numpy",
    "matplotlib",
    "pandas",
]
build-backend = "setuptools.build_meta"

[project]
name =  "data_ben"
description = "A generic interface to generate a virtual buddy"
dynamic = ["version"]
authors = [
    {name = "Pariterre", email = "pariterre@hotmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.10"
dependencies = [
    "numpy", 
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Documentation = "https://github.com/Lexielnc/data_ben/tree/main#readme"
Source = "https://github.com/Lexielnc/data_ben"
Tracker = "https://github.com/Lexielnc/data_ben/issues"

[tool.setuptools]
packages = ["data_ben"]

[tool.setuptools.dynamic]
version = {attr = "data_ben.__version__"}

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"